--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,7 +14,7 @@
 	<h1 align="center">Welcome Home! <%= userlist.name %></h1>
 	<form method="post">
 		<input type="submit" name="choice" value="AllEmpList">
-		<input type="submit" name="choice" value="AddEmployee">
+		<input type="submit" name="choice" value="addEmployee">
 	</form>
 	<fieldset block="in">
 		<table class="center">
