--- a/views/admin/addEmployee.ejs
+++ b/views/admin/addEmployee.ejs
@@ -4,7 +4,7 @@
     <title>Add Emp</title>
 </head>
 <body>
-      <h3><a href="/admin">Back</a>|<a href="/logout">Logout</a></h3>
+      
     <form method="post">
       <center>
         <fieldset>
@@ -49,4 +49,5 @@
         </fieldset>
       </center>
     </form>
+    <b><a href="/admin">Back</a> | <a href="/logout">Logout</a></b>
 </body>
