--- a/views/employee/updateProfile.ejs
+++ b/views/employee/updateProfile.ejs
@@ -38,7 +38,7 @@
             <td><input type="text" value="<%= user.phone %>" required="required" name="phone"  id="phone"></td>
           </tr>
           <tr>
-            <td><button type="submit" name="choice" value="Update">Update</button></td>
+            <td><button type="submit" name="choice" value="Update" class="btn btn-primary">Update</button></td>
           </tr>
         </table>
     </fieldset>
