--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -18,8 +18,7 @@
               <tr>
               </tr>
             </table>
-            <h3><a href="/employee">Back</a><td>|</td>
-            	<td> <a href="/logout">Logout</a></td></h3>
+            	<b><a href="/logout">Logout</a></b>
         </fieldset>
     </form>
 </body>
